*Empty MediaWiki Message*

--- a/Aserdɣyul.mw
+++ b/Aserdɣyul.mw
@@ -6,3 +6,9 @@
 Aserdɣyl d aɣersiw yemgaraden ɣef [[Aserdun|userdun]] acku ufay fell-as yerna [[imesli|imesli-ynes]] (ṣṣut-is) yemgarad f win n userdun, Yerna aserdɣyul yemal deg urwas (ccebiha) ar weɣyul
 
 == Ẓeṛ daɣen ==
+
+[[Category:iɣersiwen]]
+[[Category:Iɣersiwen iregnaten]]
+[[Category:Igmariyen]]
+[[Category:Timsuṭad]]
+[[Category:Timestuga]]
