*Empty MediaWiki Message*

--- a/Aserdun.mw
+++ b/Aserdun.mw
@@ -1,6 +1,5 @@
-{{Databox}}
-'''Aserdun''' ([[assaɣ usnan]]: ''Equus mule'') d [[aɣersiw]] [[aregna|aregnan]] seg [[ayis|tegmart]] d [[awtem|uwtem]] n [[aɣyul|weɣyul]], Aserdun yeṭṭafar [[tawacult (tasnudert)|tawacult]] n [[igmariyen]], Dɣa Aserdun iteddem igelman (ṣṣifat) n [[ayis|wayis]] d [[aɣyul|weɣyul]] acku aserdun yuddes (igder), gezzil yerna yettazal
-
+{{Automatic taxobox}}
+'''Aserdun''' ('''[[assaɣ usnan]]''': ''Equus mule'') d [[aɣersiw]] [[aregna|aregnan]] seg [[ayis|tegmart]] d [[awtem|uwtem]] n [[aɣyul|weɣyul]], Aserdun yeṭṭafar [[tawacult (tasnudert)|tawacult]] n [[igmariyen]], Dɣa Aserdun iteddem igelman (ṣṣifat) n [[ayis|wayis]] d [[aɣyul|weɣyul]] acku aserdun yuddes (igder), gezzil yerna yettazal
 
 == Amgarad gar n userdun d [[aserdɣyul|userdɣyul]] ==
 Yessefk usemgirred gar n userdun d userdɣyul acku aserdun d aɣersiw [[aregna|aregnan]] seg [[ayis|tegmart]] d [[aɣyul|uɣyul]], ma d [[aserdɣyul]] d aɣersiw [[aregna|aregnan]] seg [[ayis|wayis]] d [[aɣyul|teɣyult]]
