*Empty MediaWiki Message*

--- a/Aserdun.mw
+++ b/Aserdun.mw
@@ -7,3 +7,9 @@ Yessefk usemgirred gar n userdun d userdɣyul acku aserdun d aɣersiw [[aregna|a
 == Asexdem ==
 
 == Aserdun deg tmetti Taqbaylit ==
+
+[[Category:iɣersiwen]]
+[[Category:Iɣersiwen iregnaten]]
+[[Category:Igmariyen]]
+[[Category:Timsuṭad]]
+[[Category:Timestuga]]
