*Empty MediaWiki Message*

--- a/Anẓid.mw
+++ b/Anẓid.mw
@@ -13,6 +13,6 @@ Nezmer ad naff ugar n 10 n [[talmest|telmest]] n yenẓiden]], gar-asen:
 * [[Anẓid amaylal]] (''Pteromyini'')
 * [[Akulan]] (''Xerus erythropus'')
 * [[Anẓid uwṛaɣ]] (''Callospermophilus lateralis'')
-* [[Anẓid azeggaɣ]] (''Sciurus vulgaris]]
+* [[Anẓid azeggaɣ]] (''Sciurus vulgaris'') 
 
-[[Taggayt:Aɣersiw]]
+[[Taggayt:iɣersiwen]]
