*Empty MediaWiki Message*

--- a/Anẓid.mw
+++ b/Anẓid.mw
@@ -1,6 +1,6 @@
 {{Automatic taxobox }}
 
-'''Anziḍ''' ([[Assaɣ ussnan]]: ''sciurus'') d [[aɣersiw]] yeṭṭafaren [[asmil (tasnudert)|asmil]] n [[timsiffatin|temseffatin]], akk d [[tafesna (tasnudert)|tfesna]] n [[Timseɣẓaẓ|temseɣẓaẓ]], Dɣa amur ameqran n tudert-is yettidir-it deg [[aseklu|waddagen]],  
+'''Anziḍ''' ('''[[Assaɣ ussnan]]''': ''sciurus'') d [[aɣersiw]] yeṭṭafaren [[asmil (tasnudert)|asmil]] n [[timsiffatin|temsutad]] akk d [[tafesna (tasnudert)|tfesna]] n [[Timseɣẓaẓ|temseɣẓaẓ]], Dɣa amur ameqran n tudert-is yettidir-it deg [[aseklu|waddagen]],  
 [[asallaf]]-is d aɣezfan yeččur, al imeẓẓuɣen-is zzin. [[Talmest|Tilmas]] timeẓyanin llunt (seɛɛunt) azal n 8 sm, ma d timeqranin am tid deg tasya, ttawḍent ar 82 sm.
 
 == Učči ==
