*Empty MediaWiki Message*

--- a/Anẓid.mw
+++ b/Anẓid.mw
@@ -16,3 +16,6 @@ Nezmer ad naff ugar n 10 n [[talmest|telmest]] n yenẓiden]], gar-asen:
 * [[Anẓid azeggaɣ]] (''Sciurus vulgaris'') 
 
 [[Taggayt:iɣersiwen]]
+[[Category:Timsuṭad]]
+[[Category:Timestuga]]
+[[Category:timseɣẓaẓ]]
