*Empty MediaWiki Message*

--- a/Anẓid.mw
+++ b/Anẓid.mw
@@ -18,4 +18,5 @@ Nezmer ad naff ugar n 10 n [[talmest|telmest]] n yenẓiden]], gar-asen:
 [[Taggayt:iɣersiwen]]
 [[Category:Timsuṭad]]
 [[Category:Timestuga]]
+[[Category:Tinẓidin]]
 [[Category:timseɣẓaẓ]]
