*Empty MediaWiki Message*

--- a/Tinẓidin.mw
+++ b/Tinẓidin.mw
@@ -1,7 +1,7 @@
 {{Automatic taxobox
 | authority = [[Johann Fischer von Waldheim|Fischer de Waldheim]], 1817
 }}
-'''Tinẓidin''' d yiwet n [[Tawacult|twacult]] n [[tafesna|tfesna]] n [[Timseɣẓaẓ|temseɣẓaẓ]] deg-s 51 n [[tawsit|tewsitin]] d wazal n 280 n [[talmest|telmas]], nezmer ad naf tilmas-a deg yakk idgan n [[tagnit]] anagar [[Ustralya]] d [[Ɣinya tamaynut]] d [[Antraktika]]
+'''Tinẓidin''' d yiwet n [[Tawacult|twacult]] n [[tafesna (tasnudert)|tfesna]] n [[Timseɣẓaẓ|temseɣẓaẓ]] deg-s 51 n [[tawsit|tewsitin]] d wazal n 280 n [[talmest|telmas]], nezmer ad naf tilmas-a deg yakk idgan n [[tagnit]] anagar [[Ustralya]] d [[Ɣinya tamaynut]] d [[Antraktika]]
 
 == Ẓeṛ daɣen ==
 * [[Anẓid amaylal]]
