*Empty MediaWiki Message*

--- a/Tinẓidin.mw
+++ b/Tinẓidin.mw
@@ -9,4 +9,8 @@
 * [[Anẓid azeggaɣ]]
 * [[Anẓid n Tmazɣa]]
 
-[[Category:Aɣersiw]]
+[[Taggayt:iɣersiwen]]
+[[Category:Timsuṭad]]
+[[Category:Timestuga]]
+[[Category:Tinẓidin]]
+[[Category:timseɣẓaẓ]]
