*Empty MediaWiki Message*

--- a/Anẓid_n_Tmazɣa.mw
+++ b/Anẓid_n_Tmazɣa.mw
@@ -20,4 +20,8 @@ Mara ad yili deg [[azɣar|uzaɣar]] yettidir gar n 3 ar 5 n iseggasen, Maca mara
 * [[Anẓid amaylal]]
 * [[Timestuga]]
 
-[[Taggayt:Aɣersiw]]
+[[Taggayt:iɣersiwen]]
+[[Category:Timsuṭad]]
+[[Category:Timestuga]]
+[[Category:Tinẓidin]]
+[[Category:timseɣẓaẓ]]
