*Empty MediaWiki Message*

--- a/Anẓid_amaylal.mw
+++ b/Anẓid_amaylal.mw
@@ -5,4 +5,8 @@
 * [[Anẓid]]
 * [[Anẓid n Tmazɣa]]
 
-[[Taggayt:Aɣersiw]]
+[[Taggayt:iɣersiwen]]
+[[Category:Timsuṭad]]
+[[Category:Timestuga]]
+[[Category:Tinẓidin]]
+[[Category:timseɣẓaẓ]]
