*Empty MediaWiki Message*

--- a/Amergu_(tawsit).mw
+++ b/Amergu_(tawsit).mw
@@ -7,5 +7,6 @@
 == Ẓeṛ daɣen ==
 
 [[Category:Iylalen]]
+[[Category:iylalen iminigen]]
 [[Category:Igṭaṭ]]
-[[Category:Aɣersiw]]
+[[Category:iɣersiwen]]
