*Empty MediaWiki Message*

--- a/Amugay_n_waman.mw
+++ b/Amugay_n_waman.mw
@@ -1,4 +1,7 @@
 {{Automatic taxobox}}
-'''Amugay n waman''' ([[isem usnan]]: ''Bubalus bulalis''), d [[talmest]] yeṭṭafaren [[adu-twacult]] n [[Tifunasin|Tifunasin]] seg [[tafesna|tfesna]] n [[timestuga|tmestuga]], Talmest-a tettidir deg kra n tmura n [[Tafriqt|Tefriqt]] d [[Asya]] am: [[Maṣer]] d [[Lhend]].
+'''Amugay n waman''' ('''[[Assaɣ ussnan]]''': ''Bubalus bulalis'') d [[talmest]] yeṭṭafaren [[adu-twacult]] n [[Tifunasin|tfunasin]] seg [[tafesna (tasnudert)|tfesna]] n [[timestuga|tmestuga]], Talmest-a tettidir deg kra n tmura n [[Tafriqt|Tefriqt]] d [[Asya]] am: [[Maṣer|Miẓra]] d [[Lhend]].
 
-[[Category:Aɣersiw]]
+[[Category:iɣersiwen]]
+[[Category:iɣersiwen imegruden]]
+[[Category:Timestuga]]
+[[Category:Timsuṭad]]
