*Empty MediaWiki Message*

--- a/Amugay_n_waman.mw
+++ b/Amugay_n_waman.mw
@@ -2,6 +2,7 @@
 '''Amugay n waman''' ('''[[Assaɣ ussnan]]''': ''Bubalus bulalis'') d [[talmest]] yeṭṭafaren [[adu-twacult]] n [[Tifunasin|tfunasin]] seg [[tafesna (tasnudert)|tfesna]] n [[timestuga|tmestuga]], Talmest-a tettidir deg kra n tmura n [[Tafriqt|Tefriqt]] d [[Asya]] am: [[Maṣer|Miẓra]] d [[Lhend]].
 
 [[Category:iɣersiwen]]
+[[Category:Tifunasiyin]]
 [[Category:iɣersiwen imegruden]]
 [[Category:Timestuga]]
 [[Category:Timsuṭad]]
