*Empty MediaWiki Message*

--- a/Agawer.mw
+++ b/Agawer.mw
@@ -1,5 +1,10 @@
 {{Automatic taxobox}}
-
-'''Agawer''' ([[Assaɣ usnan]]: ''Bos gaurus'') d [[talmest]] n [[Tafunast|ufunas]] yettidiren deg [[aneẓul n usamar n Asya]], Talmest-a tettujerred d akken-it d [[Talmest ur tettwageẓ|talmest yettwaggzen s]] [[angar|wengar]] deg [[Umuɣ azeggaɣ n IUCN]] seg 1986 
+'''Agawer''' ('''[[Assaɣ usnan]]''': ''Bos gaurus'') d [[talmest]] n [[Tafunast|ufunas]] yettidiren deg [[aneẓul n usamar n Asya]], Talmest-a tettujerred d akken-it d [[Talmest ur tettwageẓ|talmest yettwaggzen s]] [[angar|wengar]] deg [[Umuɣ azeggaɣ n IUCN]] seg 1986 
 
 Agayal i d [[Tifunasiyin|tifunasin]] timeqranin yakk acku d netta yegaren [[Amugay|Amugay n Tefrikt]] d [[Amugay n waman|umugay n waman]]
+
+[[Category:iɣersiwen]]
+[[Category:Tifunasiyin]]
+[[Category:iɣersiwen imegruden]]
+[[Category:Timestuga]]
+[[Category:Timsuṭad]]
