*Empty MediaWiki Message*

--- a/Amugay.mw
+++ b/Amugay.mw
@@ -3,3 +3,8 @@
 
 == Aglam ==
 Amugay n Tefrikt d yiwet n telmest [[tadusi|yuddsen]] s waṭas, [[Tiddi (tusnakt)|Addud-is]] ar [[tayett|tuyat]] yettawad seg 1 m ar 1,7 m, [[asallaf]]-is seg 75 cm ar 110 cm, ma d [[Azuk|azuk-is]] yettawaṭ seg 500 ar 900 kg.
+
+[[Category:iɣersiwen]]
+[[Category:Tifunasiyin]]
+[[Category:Timestuga]]
+[[Category:Timsuṭad]]
