*Empty MediaWiki Message*

--- a/Isɣi.mw
+++ b/Isɣi.mw
@@ -8,3 +8,9 @@ Addud n yisɣi d win yettawaṭen ar 85 cm seg [[aqamum|uqamum-is]] ar yiri n [[
 
 
 == Idgan n tudert ==
+
+[[Category:Iɣersiwen]]
+[[Category:Iberniyen]]
+[[Category:Tisekliwin]]
+[[Category:Timseksumin]]
+[[Category:Iylalen]]
