*Empty MediaWiki Message*

--- a/Ijider_awraɣ.mw
+++ b/Ijider_awraɣ.mw
@@ -18,4 +18,5 @@ Ijider awraɣ d [[tisekliwin|aselkiw]] yuddsen s waṭas, [[afraw|afraw-is]] d a
 [[Category:Iɣersiwen]]
 [[Category:Iylalen]]
 [[Category:Tisekliwin]]
+[[Category:Iberniyen]]
 [[Category:Timseksumin]]
