*Empty MediaWiki Message*

--- a/Isefrek.mw
+++ b/Isefrek.mw
@@ -3,3 +3,9 @@
 
 == Aglam ==
 Isefrek d [[aylal]] meqren s waṭas annect n [[talmest|telmest]] meqqren yakk deg [[tawsit (tudersent)|tewsit]] n [[tasekla (aylal)|tsekla]], [[tiddi (tusnakt)|Addud]] n [[Awtem|uwtem]] yettili gar n 48 ar 61 cm, [[Azuk|azuk-is]] gar n 805 ar 1350 g  ma d [[Afriw|afriwen-is]] leddin seg 110 ar 130 cm, Dɣa d [[tawtemt]] i yugaren [[awtem]] deg [[ableɣ|ubleɣ]] acku addud-is yettili gar n 51 ar 65 cm ma d afriwen-is leddin ar 124- 160 cm yettazen 1180 ar 2100 g, [[Asallaf|adfer]] n isefrek yettili gar n 19 ar 29 cm, [[aqamum|Aqamum-is]] seg 2 ar 2,8 cm
+
+[[Category:Iɣersiwen]]
+[[Category:Tiseflayin]]
+[[Category:Tisekliwin]]
+[[Category:Timseksumin]]
+[[Category:Iylalen]]
