--- a/Aẓiẓ.mw
+++ b/Aẓiẓ.mw
@@ -9,3 +9,10 @@ Aẓiẓ d yiwen gar iylalen meqqren acku [[tiddi (tusnakt)|addud-is]] yettili g
 
 == Učči ==
 Aẓiẓ am yakk iylalen isekliwen d aylal anegmar, d [[Timseksumin|amseksum]] igemmr-d iɣersiwen yemgaraden
+
+
+[[Category:Iɣersiwen]]
+[[Category:Iberniyen]]
+[[Category:Tisekliwin]]
+[[Category:Timseksumin]]
+[[Category:Iylalen]]
