*Empty MediaWiki Message*

--- a/Tasiwant.mw
+++ b/Tasiwant.mw
@@ -9,3 +9,9 @@ Tasiwant tettidir deg [[aseklu|isekla]] yeflalen (ɛlayen), [[asekkud|asekkud-is
 [[Tawtemt]] n tasiwant tessrusay gar n 10 ar 20 n [[tamellalt|tmellalin]] deg yiwet n tikkelt [[azdal|tzeddel]] fellasen-t Azal n 20 n [[ass|wussan]] 
 
 == Tilmas ==
+
+[[Category:Iɣersiwen]]
+[[Category:Iberniyen]]
+[[Category:Tisekliwin]]
+[[Category:Timseksumin]]
+[[Category:Iylalen]]
