*Empty MediaWiki Message*

--- a/Tasiwant.mw
+++ b/Tasiwant.mw
@@ -13,5 +13,6 @@ Tasiwant tettidir deg [[aseklu|isekla]] yeflalen (ɛlayen), [[asekkud|asekkud-is
 [[Category:Iɣersiwen]]
 [[Category:Iberniyen]]
 [[Category:Tisekliwin]]
+[[Category:Tiseflayin]]
 [[Category:Timseksumin]]
 [[Category:Iylalen]]
