*Empty MediaWiki Message*

--- a/Ijider.mw
+++ b/Ijider.mw
@@ -9,3 +9,9 @@ Tbennu [[agdef|isekliwen-is]] deg [[aseklu|isekla]] yeflalen neɣ deg yirawen n 
 == Tilmas ==
 
 == Ijider deg yidles ==
+
+[[Category:Iɣersiwen]]
+[[Category:Iberniyen]]
+[[Category:Tisekliwin]]
+[[Category:Timseksumin]]
+[[Category:Iylalen]]
