*Empty MediaWiki Message*

--- a/Aylal_asekliw.mw
+++ b/Aylal_asekliw.mw
@@ -3,3 +3,10 @@
 
 ==[[Tasensartut|Asismel]] ==
 Deg iylalen isekliwen llan-t waṭas n [[tafesna|tfesna]] am [[tisekliwin|tsekliwin]] (''Accipitriformes''), d [[Tiseflalɣiwin|Tiseflalɣiwin]] (''Falconiformes''), d [[tiwukin]] (''Strigiformes''), d [[Tigermatrarin]] (''Cathartiformes'') d [[tigermamzikin]] (''Aegypiinae'')
+
+[[Category:Iɣersiwen]]
+[[Category:Iberniyen]]
+[[Category:Tiseflayin]]
+[[Category:Tisekliwin]]
+[[Category:Timseksumin]]
+[[Category:Iylalen]]
