*Empty MediaWiki Message*

--- a/Aberni.mw
+++ b/Aberni.mw
@@ -13,3 +13,9 @@ Aberni d [[aɣersiw]] [[Timseksumin|amseksum]], yeggunin deg usekkud-is yuddsen 
 * [[Aberni burgal azeggaɣ]] (''Buteo jamaicensis'')
 * [[Aberni amellal]] (''Leucopternis albicollis'') 
 * [[Aberni aberkan]] (''Buteogallus urubitinga'')
+
+[[Category:Iɣersiwen]]
+[[Category:Iberniyen]]
+[[Category:Tisekliwin]]
+[[Category:Timseksumin]]
+[[Category:Iylalen]]
