*Empty MediaWiki Message*

--- a/Taninna_tamezdayt.mw
+++ b/Taninna_tamezdayt.mw
@@ -9,3 +9,9 @@ Taninna d [[aylal]] meẓẓiyen, ytett [[aksum]]
 == Ẓeṛ daɣen ==
 * [[Aseflay]]
 * [[Aberni]]
+
+[[Category:Iɣersiwen]]
+[[Category:Iberniyen]]
+[[Category:Tisekliwin]]
+[[Category:Timseksumin]]
+[[Category:Iylalen]]
