*Empty MediaWiki Message*

--- a/Taninna_n_Mrikan.mw
+++ b/Taninna_n_Mrikan.mw
@@ -4,3 +4,9 @@
 == Ẓeṛ daɣen ==
 * [[Taninna]]
 * [[Taninnayt]]
+
+[[Category:Iɣersiwen]]
+[[Category:Tiseflayin]]
+[[Category:Tisekliwin]]
+[[Category:Timseksumin]]
+[[Category:Iylalen]]
