*Empty MediaWiki Message*

--- a/Taɣda.mw
+++ b/Taɣda.mw
@@ -16,3 +16,8 @@ Taɣda tettidir Azal n 20 n iseggasen
 * [[Abeṛṛay n Turuft]]
 * [[Tiserɣuda]]
 * [[Amcic]]
+
+[[Category:iɣersiwen]]
+[[Category:Tiserɣuda]]
+[[Category:Timsuṭad]]
+[[Category:Timseksumin]]
