--- a/Abeṛṛay_n_tẓegwa.mw
+++ b/Abeṛṛay_n_tẓegwa.mw
@@ -9,3 +9,8 @@ Abeṛṛay n tẓegwa d win yugaren [[taɣda]] d [[Amcic|umcic amegrud]], Teɣz
 
 == Ẓeṛ daɣen ==
 * [[Tiserɣuda]]
+
+[[Category:iɣersiwen]]
+[[Category:Tiserɣuda]]
+[[Category:Timsuṭad]]
+[[Category:Timseksumin]]
