*Empty MediaWiki Message*

--- a/Abeṛṛay_n_tẓegwa.mw
+++ b/Abeṛṛay_n_tẓegwa.mw
@@ -14,3 +14,4 @@ Abeṛṛay n tẓegwa d win yugaren [[taɣda]] d [[Amcic|umcic amegrud]], Teɣz
 [[Category:Tiserɣuda]]
 [[Category:Timsuṭad]]
 [[Category:Timseksumin]]
+[[Category:imcac]]
