*Empty MediaWiki Message*

--- a/Areksim.mw
+++ b/Areksim.mw
@@ -6,3 +6,9 @@
 == Idgan n tudert ==
 
 == Tadist ==
+
+[[Category:iɣersiwen]]
+[[Category:Tiserɣuda]]
+[[Category:Timsuṭad]]
+[[Category:Timseksumin]]
+[[Category:imcac]]
