*Empty MediaWiki Message*

--- a/Abeṛṛay.mw
+++ b/Abeṛṛay.mw
@@ -31,3 +31,9 @@ Mi ara ad tezɣel [[tawtemt|tewtemt]] tt-msegrawen (tt-nejmaɛen) fell-as i [[Aw
 * [[Awdan]]
 * [[Areksim]]
 * [[Azdal (aɣersiw)|Azdal]]
+
+[[Category:iɣersiwen]]
+[[Category:Tiserɣuda]]
+[[Category:Timsuṭad]]
+[[Category:Timseksumin]]
+[[Category:imcac]]
