*Empty MediaWiki Message*

--- a/Azdal_(aɣersiw).mw
+++ b/Azdal_(aɣersiw).mw
@@ -25,7 +25,8 @@ Llan-t wazal n 18 n tdefrin n wezdal:
 * [[Aɣilas]]
 * [[Awdan]]
 
-[[Category:Iɣersiwen]]
+[[Category:iɣersiwen]]
 [[Category:Tiserɣuda]]
 [[Category:Timsuṭad]]
 [[Category:Timseksumin]]
+[[Category:imcac]]
