*Empty MediaWiki Message*

--- a/Awdan.mw
+++ b/Awdan.mw
@@ -18,5 +18,6 @@ Iɣersiwen-a [[Amercel|ttmircalen]] deg yak [[akud]] deg useggas maca anecta yet
 
 [[Category:iɣersiwen]]
 [[Category:Tiserɣuda]]
-[[Category:Timseksumin]]
 [[Category:Timsuṭad]]
+[[Category:Timseksumin]]
+[[Category:imcac]]
