*Empty MediaWiki Message*

--- a/Tawurta.mw
+++ b/Tawurta.mw
@@ -34,3 +34,9 @@ Tawurta d [[aɣersiw]] [[tagemra|anegmar]] iy tetten [[talmest|tilmas]] meẓẓ
 * [[Tawurta n Urasya]]
 * [[Tawurta n Spanya]]
 * [[Tawurta n Kanada]]
+
+[[Category:Iɣersiwen]]
+[[Category:Tiserɣuda]]
+[[Category:Imcac]]
+[[Category:Timsuṭad]]
+[[Category:Timseksumin]]
