*Empty MediaWiki Message*

--- a/Tawurta_n_Kanada.mw
+++ b/Tawurta_n_Kanada.mw
@@ -21,3 +21,10 @@ Tawurta n Kanada tla (tesɛa) 28 n [[Tuɣmest|telmas]] deg-sent 4 n [[Ugel|uglan
 * [[Tawurta]]
 * [[Tawurta tazeggaɣt]]
 * [[Tawurta n Urasya]]
+
+[[Category:Iɣersiwen]]
+[[Category:Tiserɣuda]]
+[[Category:Imcac]]
+[[Category:Timsuṭad]]
+[[Category:Timseksumin]]
+[[Category:Tiwurtiwin]]
