--- a/Tawurta_tazeggaɣt.mw
+++ b/Tawurta_tazeggaɣt.mw
@@ -15,3 +15,10 @@ Tawurta tazeggaɣt [[Amercel|tettmercal]] deg taggara n [[tagrest|tegrest]] ar [
 == Ẓeṛ daɣen ==
 * [[Tawurta]]
 * [[Tawurta n Kanada]]
+
+[[Category:Iɣersiwen]]
+[[Category:Tiserɣuda]]
+[[Category:Imcac]]
+[[Category:Timsuṭad]]
+[[Category:Timseksumin]]
+[[Category:Tiwurtiwin]]
