--- a/Tawurta_n_Urasya.mw
+++ b/Tawurta_n_Urasya.mw
@@ -19,3 +19,10 @@ Llan-t 5 n [[tadfert|tdefrin]] n twurtiwin n urasya yettwassenen
 * [[Tawurta n Kanada]]
 * [[Tawurta n Spanya]]
 * [[Tawurta]]
+
+[[Category:Iɣersiwen]]
+[[Category:Tiserɣuda]]
+[[Category:Imcac]]
+[[Category:Timsuṭad]]
+[[Category:Timseksumin]]
+[[Category:Tiwurtiwin]]
