*Empty MediaWiki Message*

--- a/Tawurta_n_Spanya.mw
+++ b/Tawurta_n_Spanya.mw
@@ -18,5 +18,7 @@ Tettarew [[tawtemt|tewtemt]] deg wayyur n [[Yebrir]] seld n 63 ar 68 n wussan n 
 
 [[Category:Iɣersiwen]]
 [[Category:Tiserɣuda]]
+[[Category:Imcac]]
 [[Category:Timsuṭad]]
 [[Category:Timseksumin]]
+[[Category:Tiwurtiwin]]
