*Empty MediaWiki Message*

--- a/Amcic_n_tagant.mw
+++ b/Amcic_n_tagant.mw
@@ -19,6 +19,7 @@ Talmest-a [[agrad|tettugred]]  yakk d [[Amcic|wemcic n wexxam]] ayen id yeglan s
 == Ẓeṛ daɣen ==
 
 [[Category:iɣersiwen]]
+[[Category:imcac]]
 [[Category:Tiserɣuda]]
 [[Category:Timseksumin]]
 [[Category:Timsuṭad]]
