*Empty MediaWiki Message*

--- a/Timcac_(tawsit).mw
+++ b/Timcac_(tawsit).mw
@@ -15,3 +15,9 @@ Tilmas n tewsit-a ttidiren-t yakk idgan n [[Turuft|Uruppa]] d [[Tafriqt|Tefrikt]
 * [[Amcic aberkan n iṭarren]]
 
 == Ẓeṛ daɣen ==
+
+[[Category:Iɣersiwen]]
+[[Category:Tiserɣuda]]
+[[Category:Imcac]]
+[[Category:Timsuṭad]]
+[[Category:Timseksumin]]
