*Empty MediaWiki Message*

--- a/Aṛekka.mw
+++ b/Aṛekka.mw
@@ -12,3 +12,10 @@ Iṛekka ttidiren d tayuga neɣ d tagrawt deg kra n tama meẓẓiyen, ma d adda
 == Assaɣ d tezdayt yakk d medden ==
 
 == Ẓeṛ daɣen ==
+
+[[Category:Iɣersiwen]]
+[[Category:Tiserɣuda]]
+[[Category:Iburaɣ]]
+[[Category:Timsuṭad]]
+[[Category:Timseksumin]]
+[[Category:Taydiyyin]]
