*Empty MediaWiki Message*

--- a/Aɣecter.mw
+++ b/Aɣecter.mw
@@ -24,5 +24,8 @@ Iɣecter iga d [[talmest]] tamyiwent n [[abareɣ|iburaɣ]] i yezmer ufgan ad tyi
 * [[Abareɣ]]
 
 [[Category:Tiburaɣ]]
+[[Category:Iburaɣ]]
+[[Category:Timseksumin]]
+[[Category:Timsuṭad]]
 [[Category:Taydiyyin]]
 [[Category:iɣersiwen]]
