--- a/Aṛekka.mw
+++ b/Aṛekka.mw
@@ -19,3 +19,4 @@ Iṛekka ttidiren d tayuga neɣ d tagrawt deg kra n tama meẓẓiyen, ma d adda
 [[Category:Timsuṭad]]
 [[Category:Timseksumin]]
 [[Category:Taydiyyin]]
+[[Category:Tiburaɣ]]
