*Empty MediaWiki Message*

--- a/Abareɣ_azeggaɣ.mw
+++ b/Abareɣ_azeggaɣ.mw
@@ -21,6 +21,9 @@ Ini n warraɣ s umata yettili d azeggaɣ deg tfekka-ynes tafellayt. Ma d idis-is
 * [[Taydiyyin]]
 * [[Uccen]]
 
-[[Category:Taydiyyin]]
+[[Category:Tiburaɣ]]
+[[Category:Iburaɣ]]
 [[Category:Timseksumin]]
+[[Category:Timsuṭad]]
+[[Category:Taydiyyin]]
 [[Category:iɣersiwen]]
