*Empty MediaWiki Message*

--- a/Uccen.mw
+++ b/Uccen.mw
@@ -5,7 +5,7 @@
 Yettidir deg [[tajumma|tjumma]] meqqren, Seg [[Tanzanya]] ɣer [[Sudan]] d [[Maṣer]], [[Libya]], [[Tunes]], [[Tamurt n Leqbayel]],  [[Senigal]] deg [[Tafriqt|Tefriqt]]
 
 == Učči ==
-Uccen d aɣersiw amseksum, Yegguni af [[Aɣersiw|iɣerdayen]], [[AZERDI|izerdiyen]] d [[abẓiẓ|yebẓaẓ]]
+Uccen d aɣersiw amseksum, Yegguni af [[Aɣersiw|iɣerdayen]], [[Aɣuli|izerdiyen]] d [[abẓiẓ|yebẓaẓ]]
 
 =Amawal=
 
