--- a/Idwi.mw
+++ b/Idwi.mw
@@ -16,3 +16,4 @@ Idwi iy tett [[imɣi|imɣan]] d [[izinzer|izunzar]] d [[Aburɣas|iburɣas]] n id
 
 [[Category:iɣersiwen]]
 [[Category:Timseɣẓaẓ]]
+[[Category:Timsuṭad]]
