*Empty MediaWiki Message*

--- a/Idwi.mw
+++ b/Idwi.mw
@@ -17,3 +17,4 @@ Idwi iy tett [[imɣi|imɣan]] d [[izinzer|izunzar]] d [[Aburɣas|iburɣas]] n id
 [[Category:iɣersiwen]]
 [[Category:Timseɣẓaẓ]]
 [[Category:Timsuṭad]]
+[[Category:Tidwin]]
