--- a/Aridal.mw
+++ b/Aridal.mw
@@ -7,3 +7,8 @@ Aridal d yiwen gar sin n telmas n [[ifis|yifis]] iy meqren yakk, Aglim-is d [[ar
 == Idgan n tudert ==
 Yettidir deg [[Tafriqt n ugafa|Tefrikt n ugafa]] d [[Asya talemmast]] d [[Lhend]]
 [[Category:Aɣersiw]]
+
+[[Category:Iɣersiwen]]
+[[Category:Timseksumin]]
+[[Category:Timsuṭad]]
+[[Category:Tiffisin]]
