*Empty MediaWiki Message*

--- a/Ifis.mw
+++ b/Ifis.mw
@@ -13,4 +13,7 @@ Yettidir deg [[Tafriqt|Tefrikt]] d [[Asamar alemmas|usamar alemmas]] d [[Turkya]
 
 == Ifis deg yidles == 
 
-[[Category:Aɣersiw]]
+[[Category:Iɣersiwen]]
+[[Category:Timseksumin]]
+[[Category:Timsuṭad]]
+[[Category:Tiffisin]]
