*Empty MediaWiki Message*

--- a/Tazuri.mw
+++ b/Tazuri.mw
@@ -3,3 +3,9 @@
 
 == Aglam ==
 Addud-is yettili gar n 95 ar 165 cm, yettazen gar 40 ar 63 kg
+
+
+[[Category:Iɣersiwen]]
+[[Category:Timseksumin]]
+[[Category:Timsuṭad]]
+[[Category:Tiffisin]]
