*Empty MediaWiki Message*

--- a/Tiffisin.mw
+++ b/Tiffisin.mw
@@ -10,6 +10,12 @@ Llan waṭas n [[Talmest|telmas]] n Tiffisin, Deg-sen:
 * [[Aridal]]
 * [[Ifis]]
 * [[Tazuri]]
-
 * [[Ifis aras]]
-[[category:aɣersiw]]
+
+
+
+
+[[Category:Iɣersiwen]]
+[[Category:Timseksumin]]
+[[Category:Timsuṭad]]
+[[Category:Tiffisin]]
