--- a/Iẓiwec_n_wexxam.mw
+++ b/Iẓiwec_n_wexxam.mw
@@ -37,5 +37,6 @@ Yezmer ad yili [[Afraw|ufraw]] n iẓiwec s [[tasnalɣawt tazifit|yiniten yemgar
 * [[Aylal]]
 
 [[Category:iylalen]]
+[[Category:iylalen iminigen]]
 [[Category:igṭaṭ]] 
 [[Category:iɣersiwen]]
