*Empty MediaWiki Message*

--- a/Ilew_n_tmazɣa.mw
+++ b/Ilew_n_tmazɣa.mw
@@ -14,4 +14,6 @@
 * [[Ilew n Asya]]
 
 [[Category:iɣersiwen]]
-[[Category:aɣersiw]]
+[[Category:iɣersiwen inegren]]
+[[Category:Timsuṭad]]
+[[Category:Timestuga]]
