*Empty MediaWiki Message*

--- a/Asberyun.mw
+++ b/Asberyun.mw
@@ -1,5 +1,5 @@
 {{automatic taxobox}}
-'''Asberyun''' neɣ '''Aberyun''' ([[isem usnan]]: ''Lacerta viridis''), (yettwassen daɣen s: '''Amulab''' maca awal-a yekka-d seg Teɛrabt ''سحلية المولاب''), Asberyun d [[Talmest]] n [[izermummuyen]] yeṭṭafaren [[tafesna]] n [[timeskebrin|tmeskebrin]] deg [[asmil (tasnudert)|wesmil]] n [[timraradin|temraradin]].
+'''Asberyun''' neɣ '''Aberyun''' ('''[[Assaɣ ussnan]]''': ''Lacerta viridis''), (yettwassen daɣen s: '''Amulab''' maca awal-a yekka-d seg Teɛrabt ''سحلية المولاب'') d [[Talmest]] n [[izermummuyen]] yeṭṭafaren [[tafesna (tasnudert)|tafesna]] n [[timeskebrin|tmeskebrin]] deg [[asmil (tasnudert)|wesmil]] n [[timraradin|temraradin]].
 
 == Timellalin ==
 [[Tawtemt]] n usberyun tessrusay gar n 8 ar 16 n tmellalit, Teggar-itent s ddaw n wakal.
