--- a/Timeskebrin.mw
+++ b/Timeskebrin.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Timeskebrin''' ([[isem usnan]]: ''Squamata'') d [[tafesna]] n [[aɣersiw|iɣersiwen]] yeṭṭafaren [[asmil (tasnudert)|asmil]] n [[Timraradin|temraradin]], Timeskebrin d nettat yakk i d tafesna dgi llan-t waṭas n telmas gar n wesmil n temraradin s wazal n 59% tiddirent deg yakk idgan n [[tagnit|tegnit]] anagar [[Antraktika]], Deg temskebrin llan-t snat n tegrawin: [[imiglen]] (''Ophidia'') d [[tazermemmuyt|tzermemmuyin]]
+'''Timeskebrin''' ('''[[Assaɣ ussnan]]''': ''Squamata'') d [[tafesna (tasnudert)|tafesna]] n [[aɣersiw|iɣersiwen]] yeṭṭafaren [[asmil (tasnudert)|asmil]] n [[Timraradin|temraradin]], Timeskebrin d nettat yakk i d tafesna dgi llan-t waṭas n telmas gar n wesmil n temraradin s wazal n 59% tiddirent deg yakk idgan n [[tagnit|tegnit]] anagar [[Antraktika]], Deg temskebrin llan-t snat n tegrawin: [[imiglen]] (''Ophidia'') d [[tazermemmuyt|tzermemmuyin]]
 
 == Tilmas ==
 
