*Empty MediaWiki Message*

--- a/Asberyun.mw
+++ b/Asberyun.mw
@@ -10,4 +10,6 @@
 == Idgan n tudert == 
 Asberyun yettidir deg [[Turuft]] d [[agafa n Tefriqt|ugafa n Tefriqt]] anda yettili [[anezwu amnummes|unezwu imnummsen]].
 
-[[Category:Aɣersiw]]
+[[Category:iɣersiwen]]
+[[Category:Timeskebrin]]
+[[Category:Timraradin]]
