*Empty MediaWiki Message*

--- a/Asbes.mw
+++ b/Asbes.mw
@@ -6,6 +6,9 @@
 Asbes d aɣersiw yellan deg wumuɣ n wučči i kra n telmas n iɣersiwen am [[Uccen|wuccen]] d [[iberni]]
 
 == Učči ==
-Deg wučči ynes, Asbes yegguni af kra n igeṭfen am [[tiɣiṛdemt|tiɣirdmiwin]] kra n tlmas n [[Timraradin|temraradin]] d [[igṭaṭ]]
+Deg wučči ynes, Asbes yegguni af kra n igeṭfen am [[tiɣiṛdemt|tiɣirdmiwin]] kra n tlmas n [[Timraradin|temraradin]] d [[agṭiṭ|igṭaṭ]]
 
-[[Category:aɣersiw]]
+[[Category:iɣersiwen]]
+[[Category:Timsuṭad]]
+[[Category:Timseksumin]]
+[[Category:Tizelkeṭṭiwin]]
