--- a/Asbes.mw
+++ b/Asbes.mw
@@ -6,7 +6,7 @@
 Asbes d aɣersiw yellan deg wumuɣ n wučči i kra n telmas n iɣersiwen am [[Uccen|wuccen]] d [[iberni]]
 
 == Učči ==
-Deg wučči ynes, Asbes yegguni af kra n igeṭfen am [[tiɣiṛdemt|tiɣirdmiwin]] kra n tlmas n [[Timraradin|temraradin]] d [[agṭiṭ|igṭaṭ]]
+Deg wučči ynes, Asbes yegguni af kra n igeṭfen am [[tiɣirdemt|tiɣirdmiwin]] kra n tlmas n [[Timraradin|temraradin]] d [[agṭiṭ|igṭaṭ]]
 
 [[Category:iɣersiwen]]
 [[Category:Timsuṭad]]
