--- a/Asbes.mw
+++ b/Asbes.mw
@@ -3,7 +3,7 @@
 '''Asbes''' neɣ '''Amcic n yeẓra''' ('''[[Assaɣ ussnan]]''': ''Suricata'') d [[tawsit (tudersent)|tawsit]] n [[aɣersiw|iɣersiwen]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[Tizelkeṭṭiwin|tzelkeṭṭiwin]] deg [[tafesna (tasnudert)|tfesna]] n [[timseksumin|temseksumin]], Yettidir deg tegrawin yettawden ar 30 n isebsen deg [[azaɣar|izaɣaren]] yeldin, Tamurt-is taẓarant d [[Tiniri n Kalahari]] deg tmurt n [[Tafriqt n wadda]] akk d [[Namibia]].
 
 == Ingiren ==
-Asbes d aɣersiw yellan deg wumuɣ n wučči i kra n telmas n iɣersiwen am [[Uccen|wuccen]] d [[iberni]]
+Asbes d aɣersiw yellan deg wumuɣ n wučči i kra n telmas n iɣersiwen am [[Uccen|wuccen]] d [[aberni|uberni]]
 
 == Učči ==
 Deg wučči ynes, Asbes yegguni af kra n igeṭfen am [[tiɣirdemt|tiɣirdmiwin]] kra n tlmas n [[Timraradin|temraradin]] d [[agṭiṭ|igṭaṭ]]
