*Empty MediaWiki Message*

--- a/Azyagur.mw
+++ b/Azyagur.mw
@@ -8,4 +8,6 @@
 ***[[Azyagur (tawsit)|Azyagur]]
 
 
-[[Category:aɣersiw]]
+[[Category:iɣersiwen]]
+[[Category:Timraradin]]
+[[Category:Timeskebrin]]
