--- a/Azyagur.mw
+++ b/Azyagur.mw
@@ -1,6 +1,6 @@
 {{Automatic taxobox}}
 
-'''Azyagur''', ('''[[Assaɣ ussnan]]''': ''Iguania'') d [[ddaw-tfesna]] n [[Timraradin|temraradin]] yeṭṭafaren [[adu-tfesna]] n [[Tazermemmuyt|tzermemmyin]] deg [[tafesna|tfesna]] n [[timeskebrin|tmeskebrin]]
+'''Azyagur''', ('''[[Assaɣ ussnan]]''': ''Iguania'') d [[ddaw-tfesna|Adu-tfesna]] n [[Timraradin|temraradin]] yeṭṭafaren [[adu-tfesna]] n [[Tazermemmuyt|tzermemmyin]] deg [[tafesna (tasnudert)|tfesna]] n [[timeskebrin|tmeskebrin]]
 
 == Asismel d tsartut ==
 * [[Tazyagurt]]
