*Empty MediaWiki Message*

--- a/Azyagur_(tawsit).mw
+++ b/Azyagur_(tawsit).mw
@@ -6,3 +6,10 @@
 
 * [[Tazaygurt n tegzirin]]
 == Idgan n tudert ==
+
+
+[[Category:iɣersiwen]]
+[[Category:Timraradin]]
+[[Category:Timeskebrin]]
+[[Category:Tizyagurin]]
+[[Category:Timestuga]]
