*Empty MediaWiki Message*

--- a/Tazyagurt.mw
+++ b/Tazyagurt.mw
@@ -6,3 +6,9 @@
 * [[Tizyagurin]] 
 ** [[azyagur (tawsit)|Azyagur]]
 *** [[Tazyagurt timsennent]]
+
+[[Category:iɣersiwen]]
+[[Category:Timraradin]]
+[[Category:Timeskebrin]]
+[[Category:Tizyagurin]]
+[[Category:Timestuga]]
