*Empty MediaWiki Message*

--- a/Tizermemmuyin_timeskebrin.mw
+++ b/Tizermemmuyin_timeskebrin.mw
@@ -1,5 +1,11 @@
 {{Automatic taxobox}}
 
-'''Tizermemmuyin timeskebrin''' ([[isem usnan]]: ''Lepidosauria'') d [[afelafesna]] yeṭṭafaren [[Astirf (tasnudert)|astirf]] n [[timzikrin|temzekrin]], Llan-t snat n [[tafesna (tasnudert)|tfesna]] deg tzermemmuyin timeskebrin
+'''Tizermemmuyin timeskebrin''' ([[isem usnan]]: ''Lepidosauria'') d [[afelafesna]] yeṭṭafaren [[Astirf (tasnudert)|astirf]] n [[timzikrin|temzekrin]], Llan-t snat n [[tafesna (tasnudert)|tfesniwin]] deg tzermemmuyin timeskebrin
 
-[[Category:Aɣersiw]]
+
+[[Category:iɣersiwen]]
+[[Category:Tizermemmuyin]]
+[[Category:Timraradin]]
+[[Category:Timeskebrin]]
+[[Category:Tizyagurin]]
+[[Category:Timestuga]]
