*Empty MediaWiki Message*

--- a/Tazyagurt_timsennent.mw
+++ b/Tazyagurt_timsennent.mw
@@ -10,4 +10,8 @@
 * [[Tazyagurt n San Esteban]]
 * [[Tazyagurt n San Pedro nolasko]]
 
-[[Category:aɣersiw]]
+[[Category:iɣersiwen]]
+[[Category:Timraradin]]
+[[Category:Timeskebrin]]
+[[Category:Tizyagurin]]
+[[Category:Timestuga]]
