*Empty MediaWiki Message*

--- a/Asberyun.mw
+++ b/Asberyun.mw
@@ -8,8 +8,9 @@
 [[Tafekka]] n tewtemt tettili gar n 32 ar 36 cm, S wakka ad tugar awtem iy meẓẓeyen fell-as.
 
 == Idgan n tudert == 
-Asberyun yettidir deg [[Turuft]] d [[agafa n Tefriqt|ugafa n Tefriqt]] anda yettili [[anezwu amnummes|unezwu imnummsen]].
+Asberyun yettidir deg [[Turuft]] d [[Tafriqt n Ugafa|ugafa n Tefriqt]] anda yettili [[anezwu amnummes|unezwu imnummsen]].
 
 [[Category:iɣersiwen]]
 [[Category:Timeskebrin]]
 [[Category:Timraradin]]
+[[Category:Tizermemmuyin]]
