*Empty MediaWiki Message*

--- a/Taccelt.mw
+++ b/Taccelt.mw
@@ -18,5 +18,6 @@ S unect (ɛla ḥsab) n {{Bioref|ReptileDB genre|25 yennayer 2014}} :
 
 [[Category:Tizermawin]]
 [[Category:Izerman]]
-[[Category:Aɣersiw]]
+[[Category:iɣersiwen]]
 [[Category:Timeskebrin]]
+[[Category:Timseksumin]]
