*Empty MediaWiki Message*

--- a/Azrem.mw
+++ b/Azrem.mw
@@ -25,4 +25,8 @@ Tilmas n yizerman s umata ttidiren s [[agmar|wegmar]] n yiɣersiwen niḍen. Kra
 
 <nowiki>http://tasedkalt.wikidot.com/yizerman</nowiki>
 
-[[Category:Aɣersiw]]
+[[Category:Tizermawin]]
+[[Category:Izerman]]
+[[Category:iɣersiwen]]
+[[Category:Timeskebrin]]
+[[Category:Timseksumin]]
