*Empty MediaWiki Message*

--- a/Timraradin.mw
+++ b/Timraradin.mw
@@ -19,4 +19,9 @@ Ar tura llan-t anagar 4 n [[Tafesna|tfesna]]:
 # [[Ifker|Tifekrin]]: Llan wazal n 250 n telmas yettwassen ttidiren deg waman n igarawen d isafen yakk d igelmimen
 # [[Tizutar]]: 
 
+[[Category:Tikuẓdarin]]
+[[Category:Izerman]]
+[[Category:Timestuga]]
 [[Category:iɣersiwen]]
+[[Category:Timeskebrin]]
+[[Category:Timseksumin]]
