--- a/Ajaɣiɣ_(igṭaṭ).mw
+++ b/Ajaɣiɣ_(igṭaṭ).mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox|item = Q25565}}
-'''ijuɣaɣ''' d tarbaɛt n [[aylal|iylalen]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[Tigerfiwin|tgerfiwin]] yesɛan aṭas n [[Agṭiṭ|igṭaṭ]] dɣa igṭaṭ-a ɣur-sen assaɣ neɣ tazdayt meqqren yak d [[ijilem]].
+'''ijuɣaɣ''' ('''[[Assaɣ ussnan]]''': ''Corvidae'') d [[tawacult (tasnudert)|tawacult]] n [[aylal|iylalen]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[Tigerfiwin|tgerfiwin]] yesɛan aṭas n [[Agṭiṭ|igṭaṭ]] dɣa igṭaṭ-a ɣur-sen assaɣ neɣ tazdayt meqqren yak d [[ijilem]].
 
 == Tilmas ==
 Igṭaṭ umi qqaren Ijuɣaɣ ur ttwasismeln ara yakk s ddaw n umagrad n yiwet n [[tidulmest]] maca ttwafraqen af waṭas n [[Tawsit (tudersent)|tewsitin]] deg twacult n [[Tigerfiwin|tgerfiwin]], Tiwsitin-a s iman-nsent gzment af mrawat (ugar n 10) n telmas yettugezmen s talɣa ayyi:
