*Empty MediaWiki Message*

--- a/Ajaɣiɣ_(igṭaṭ).mw
+++ b/Ajaɣiɣ_(igṭaṭ).mw
@@ -21,4 +21,7 @@ Igṭaṭ umi qqaren Ijuɣaɣ ur ttwasismeln ara yakk s ddaw n umagrad n yiwet n
 * [[Ajaɣiɣ n Fluṛida]]
 * [[Ajaɣiɣ n Meksik]]
 
-[[Category:Aɣersiw]]
+[[Category:iɣersiwen]]
+[[Category:Iylalen]]
+[[Category:Igṭaṭ]]
+[[Category:Igṭaṭ iminigen]]
