*Empty MediaWiki Message*

--- a/Tigerfiwin.mw
+++ b/Tigerfiwin.mw
@@ -1,4 +1,4 @@
 {{Automatic taxobox}}
-'''Tigerfiwin''' ('''[[Assaɣ ussnan]]: ''Corvidae'') d [[tawacult (tasnudert)|tawacult]] n [[agṭiṭ|igṭaṭ]] yettidiren deg yakk [[amenẓaw|imenẓawen]] n tegnit (anagar [[Antraktika]]), Dges ugar n 120 n [[Talmest|telmas]] gar-asent: [[ajaɣiɣ]], [[ijilem]], [[Timesferẓatin]]
+'''Tigerfiwin''' ('''[[Assaɣ ussnan]]''': ''Corvidae'') d [[tawacult (tasnudert)|tawacult]] n [[agṭiṭ|igṭaṭ]] yettidiren deg yakk [[amenẓaw|imenẓawen]] n tegnit (anagar [[Antraktika]]), Dges ugar n 120 n [[Talmest|telmas]] gar-asent: [[ajaɣiɣ]], [[ijilem]], [[Timesferẓatin]]
 
 == Tasartut d usismel ==
