--- a/Tigerfiwin.mw
+++ b/Tigerfiwin.mw
@@ -2,3 +2,8 @@
 '''Tigerfiwin''' ('''[[Assaɣ ussnan]]''': ''Corvidae'') d [[tawacult (tasnudert)|tawacult]] n [[agṭiṭ|igṭaṭ]] yettidiren deg yakk [[amenẓaw|imenẓawen]] n tegnit (anagar [[Antraktika]]), Dges ugar n 120 n [[Talmest|telmas]] gar-asent: [[ajaɣiɣ]], [[ijilem]], [[Timesferẓatin]]
 
 == Tasartut d usismel ==
+
+[[Category:iɣersiwen]]
+[[Category:Iylalen]]
+[[Category:Igṭaṭ]]
+[[Category:Igṭaṭ iminigen]]
