*Empty MediaWiki Message*

--- a/Ajaɣiɣ.mw
+++ b/Ajaɣiɣ.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Ajaɣiɣ''' d [[aylal]] n [[ijuɣaɣ]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[Tigerfiwin|tgerfiwin]] deg [[Tafesna|tfesna]] n [[Timsegṭaṭ|temsegṭaṭ]] yettidir deg [[amenẓaw|imenẓawen]] n [[Turuft]], [[Asya]] d [[Tafriqt]]
+'''Ajaɣiɣ''' ('''[[Assaɣ ussnan]]''': ''Garrulus glandarius'') d [[aylal]] n [[ijuɣaɣ]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[Tigerfiwin|tgerfiwin]] deg [[Tafesna|tfesna]] n [[Timsegṭaṭ|temsegṭaṭ]] yettidir deg [[amenẓaw|imenẓawen]] n [[Turuft]], [[Asya]] d [[Tafriqt]]
 
 == Idgan n tudert ==
 
