*Empty MediaWiki Message*

--- a/Ajaɣiɣ.mw
+++ b/Ajaɣiɣ.mw
@@ -4,3 +4,11 @@
 == Idgan n tudert ==
 
 == Aglam ==
+
+
+[[Category:iɣersiwen]]
+[[Category:Ijuɣaɣ]]
+[[Category:Tigerfiwin]]
+[[Category:Iylalen]]
+[[Category:Igṭaṭ]]
+[[Category:Igṭaṭ iminigen]]
