*Empty MediaWiki Message*

--- a/Ilef.mw
+++ b/Ilef.mw
@@ -1,6 +1,6 @@
 {{Automatic taxobox}}
 
-'''Ilef''' ([[Assaɣ usnan]]: ''Sus'') d [[Aɣersiw]] [[Timsiffatin|asuṭṭad]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[Tilfatin|telfatin]] yettidir deg [[Tafrikt|Tefrikt]] [[Turuft|Uruppa]] d [[Asya]] , Dɣa llan-t [[talmest|telmas]] d [[agrad|timegrudin]] (tturebban-t deg wexx) i wfaras n [[aksum|weksum]] d tmugri n weglim
+'''Ilef''' ('''[[Assaɣ usnan]]''': ''Sus'') d [[aɣersiw]] [[Timsiffatin|asuṭṭad]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[Tilfatin|telfatin]] yettidir deg [[Tafrikt|Tefrikt]] [[Turuft|Uruppa]] d [[Asya]] , Dɣa llan-t [[talmest|telmas]] d [[agrad|timegrudin]] (tturebban-t deg wexxam) iw faras n [[aksum|weksum]] d tmugri n weglim
 
 == Aglam ==
 Ilef d [[aɣersiw]] amufay azuran yerna yuddes, ila (yesɛa) [[Ugel|uglan]] meẓẓiyen ffɣen-d seg y[[imi]]-s yerna ɣɣaren-asen timeɣlin. [[Aqerru|Iɣef-is]] d ameqran, [[udem|udem-is]] d aɣezfan yerna yesseqdac-it akken ad yessekfel yis ayen yeffren ddaw w[[akal]], Amur ameqran n [[talmest|telmas]] n yilfan ttidiren-t g [[tagant|tẓegwa]]
