*Empty MediaWiki Message*

--- a/Ilef.mw
+++ b/Ilef.mw
@@ -10,9 +10,11 @@ Ilef d [[aɣersiw]] [[aramma]] (yettett kra yellan: [[aksum]], [[aburɣas|iburɣ
 
 == Tilmas == 
 * [[Ilef imikri]]
-
 * [[Ilef n tẓegwa]]
-
 * [[Ilef agezlan]] 
 
-[[Category:Aɣersiw]]
+
+
+[[Category:iɣersiwen]]
+[[Category:Timsuṭad]]
+[[Category:Tirammatin]]
