*Empty MediaWiki Message*

--- a/Izerzer.mw
+++ b/Izerzer.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Izerzer''' d [[aɣersiw]] [[Timsiffatin|asuṭad]] yeṭṭafaren [[adu-telmest]] n [[Timesluffaẓ|tmesluffaẓ]] seg [[tafesna|tfesna]] n [[Tisenfednin|tsenfednin]]. Izerzren d [[aɣersiw|iɣersiwen]] imyiwnen ilan (yesɛan) [[iɣess|iɣsan]] deg [[Aqerru|iqerruyen-nsen]] dɣa iɣsan-a gan d [[icc|acciwen]]
+'''Izerzer''' ('''[[Assaɣ ussnan]]''': ''Cervidae'') d [[aɣersiw]] [[Timsiffatin|asuṭad]] yeṭṭafaren [[adu-telmest]] n [[Timesluffaẓ|tmesluffaẓ]] seg [[tafesna (tasnudert)|tfesna]] n [[Tisenfednin|tsenfednin]]. Izerzren d [[aɣersiw|iɣersiwen]] imyiwnen ilan (yesɛan) [[iɣess|iɣsan]] deg [[Aqerru|iqerruyen-nsen]] dɣa iɣsan-a gan d [[icc|acciwen]]
 
 Llan-t wazal n 60 n telmas n [[tizerzrin|tzerzrin]] deg umadal am [[izerzer amaziɣ]] (izerzer amyiwen yettidiren deg [[Tafriqt]]), [[Amezzirez]] d [[tizerzert]] d waṭas n telmas n iden
 
