*Empty MediaWiki Message*

--- a/Izerzer.mw
+++ b/Izerzer.mw
@@ -13,4 +13,9 @@ Izerzren d iɣersiwen yemgaraden s waṭas deg [[ableɣ|ubleɣ]] maca d nutni ya
 == Učči ==
 
 == Tilmas == 
-[[Category:Aɣersiw]]
+
+
+[[Category:iɣersiwen]]
+[[Category:Timsuṭad]]
+[[Category:Timestuga]]
+[[Category:Timesluffaẓ]]
