*Empty MediaWiki Message*

--- a/Izerzer_amaziɣ.mw
+++ b/Izerzer_amaziɣ.mw
@@ -10,4 +10,11 @@ Izerzer amaziɣ meẓẓiy ɣef [[Akʷrekʷdan|izerzer azeggaɣ]], [[ini|ini-yne
 == Učči ==
 
 == [[Amyaraw]] ==
-Izerzer d aɣersiw [[tarrawt|yettarwen]] gar n [[ayyur (akud)|wayyur]] n [[Fuṛaṛ]] ar wayyur n [[Yunyu]]. [[Tadist]] tettaṭaf 8 n wayyure
+Izerzer d aɣersiw [[tarrawt|yettarwen]] gar n [[ayyur (akud)|wayyur]] n [[Fuṛaṛ]] ar wayyur n [[Yunyu]]. [[Tadist]] tettaṭaf 8 n wayyuren
+
+
+[[Category:iɣersiwen]]
+[[Category:izrezren]]
+[[Category:Timsuṭad]]
+[[Category:Timestuga]]
+[[Category:Timesluffaẓ]]
