*Empty MediaWiki Message*

--- a/Akʷrekʷdan.mw
+++ b/Akʷrekʷdan.mw
@@ -1,7 +1,15 @@
 {{Automatic taxobox}}
 '''Akʷrekʷdan''' ([[assaɣ usnan]]: ''Cervus elaphus'') d yiwet n [[talmest|telmest]] n [[izerzer]] meqqren yettidiren deg Amur ameqran n idgan n [[Turuft|Uruppa]] d [[adrar|idurar]] n [[Kawkaz]] d [[Asya tameẓyant]] d [[Idurar n Aṭlas]] deg [[Tafriqt n ugafa]] akken daɣen ig ttwasekcem ar kra n tmura am [[Tarjentint|Arjentin]] 
 
-== Aglam =
+== Aglam ==
 Akʷrekʷdan d aɣersiw [[Timesluffaẓ|amaffaẓ]] yettemcabin ar [[izerzer amaziɣ]]
 
 == Tasartut ==
+
+
+[[Category:iɣersiwen]]
+[[Category:Izrezren]]
+[[Category:Timesluffaẓ]]
+[[Category:Timsuṭad]]
+[[Category:Timestuga]]
+[[Category:Timesluffaẓ]]
