*Empty MediaWiki Message*

--- a/Amezzirez.mw
+++ b/Amezzirez.mw
@@ -9,3 +9,9 @@ Amezzirez d aɣersiw yettidiren deg [[Turuft n ugafa]] d [[Tamrikt n Ugafa]] Yet
 
 == Armud ==
 Amezzirez d aɣersiw iy ṭeggin deg tnezzagt n zik d tmeddit
+
+[[Category:iɣersiwen]]
+[[Category:Izrezren]]
+[[Category:Timsuṭad]]
+[[Category:Timestuga]]
+[[Category:Timesluffaẓ]]
