*Empty MediaWiki Message*

--- a/Izerzer.mw
+++ b/Izerzer.mw
@@ -18,4 +18,5 @@ Izerzren d iɣersiwen yemgaraden s waṭas deg [[ableɣ|ubleɣ]] maca d nutni ya
 [[Category:iɣersiwen]]
 [[Category:Timsuṭad]]
 [[Category:Timestuga]]
+[[Category:Tisenfednin]]
 [[Category:Timesluffaẓ]]
