*Empty MediaWiki Message*

--- a/Aɣeṛda.mw
+++ b/Aɣeṛda.mw
@@ -17,3 +17,5 @@ Iɣeṛdayen tetten imɣan (aladɣa [[imendi|imendiyen]] d [[igumma]]) ayen id t
 
 [[Category:iɣersiwen]]
 [[Category:Timseɣẓaẓ]]
+[[Category:Timsuṭad]]
+[[Category:Iɣerdayen]]
