*Empty MediaWiki Message*

--- a/Tazɣuda.mw
+++ b/Tazɣuda.mw
@@ -16,3 +16,4 @@ Tazɣuda d aɣersiw yessermaden deg [[iṭ]], tettunag ɣef wučč, učči-ynes 
 [[Category:aɣersiw]]
 [[Category:timseɣẓaẓ]]
 [[Category:tiɣeṛdayin]]
+[[Category:Iɣerdayen]]
