*Empty MediaWiki Message*

--- a/Tazɣuda.mw
+++ b/Tazɣuda.mw
@@ -15,5 +15,6 @@ Tazɣuda d aɣersiw yessermaden deg [[iṭ]], tettunag ɣef wučč, učči-ynes 
 
 [[Category:aɣersiw]]
 [[Category:timseɣẓaẓ]]
+[[Category:Timsuṭad]]
 [[Category:tiɣeṛdayin]]
 [[Category:Iɣerdayen]]
