*Empty MediaWiki Message*

--- a/Aɣeṛda.mw
+++ b/Aɣeṛda.mw
@@ -15,7 +15,8 @@ Iɣeṛdayen tetten imɣan (aladɣa [[imendi|imendiyen]] d [[igumma]]) ayen id t
 
 == Ẓeṛ daɣen ==
 
-[[Category:iɣersiwen]]
-[[Category:Timseɣẓaẓ]]
+[[Category:aɣersiw]]
+[[Category:timseɣẓaẓ]]
 [[Category:Timsuṭad]]
+[[Category:tiɣeṛdayin]]
 [[Category:Iɣerdayen]]
