*Empty MediaWiki Message*

--- a/Tafrirut.mw
+++ b/Tafrirut.mw
@@ -8,3 +8,8 @@
 Tafrirut d aɣersiw iteččen [[ifes|ifsan]] d [[agummu|igumma]] 
 
 == Tilmas ==
+
+[[Category:aɣersiw]]
+[[Category:timseɣẓaẓ]]
+[[Category:Timsuṭad]]
+[[Category:icebcalen]]
