*Empty MediaWiki Message*

--- a/Acebcal.mw
+++ b/Acebcal.mw
@@ -24,3 +24,13 @@ Acebcal d [[aɣersiw]] [[Timseɣẓaẓ|amseɣẓaẓ]] meẓẓiyen yettemcabin
 * [[Acebcal n Tefriqt]] ([[Assaɣ usnan]]: ''Graphiurus'') 
 
 * [[Acebcal n tniri]] ([[Assaɣ usnan]]: ''Selevinia'')
+
+
+
+
+
+
+[[Category:aɣersiw]]
+[[Category:timseɣẓaẓ]]
+[[Category:Timsuṭad]]
+[[Category:icebcalen]]
