*Empty MediaWiki Message*

--- a/Acebcal.mw
+++ b/Acebcal.mw
@@ -30,7 +30,7 @@ Acebcal d [[aɣersiw]] [[Timseɣẓaẓ|amseɣẓaẓ]] meẓẓiyen yettemcabin
 
 
 
-[[Category:aɣersiw]]
+[[Category:iɣersiwen]]
 [[Category:timseɣẓaẓ]]
 [[Category:Timsuṭad]]
 [[Category:icebcalen]]
