*Empty MediaWiki Message*

--- a/Tafrirut.mw
+++ b/Tafrirut.mw
@@ -9,7 +9,7 @@ Tafrirut d aɣersiw iteččen [[ifes|ifsan]] d [[agummu|igumma]]
 
 == Tilmas ==
 
-[[Category:aɣersiw]]
+[[Category:iɣersiwen]]
 [[Category:timseɣẓaẓ]]
 [[Category:Timsuṭad]]
 [[Category:icebcalen]]
