*Empty MediaWiki Message*

--- a/Acebcal_(tawsit).mw
+++ b/Acebcal_(tawsit).mw
@@ -9,5 +9,10 @@
 
 == Ẓeṛ daɣen == 
 * [[Acebcal]]
-
 * [[Tafrirut]]
+
+
+[[Category:iɣersiwen]]
+[[Category:timseɣẓaẓ]]
+[[Category:Timsuṭad]]
+[[Category:icebcalen]]
