*Empty MediaWiki Message*

--- a/Tafrirut_tazurant.mw
+++ b/Tafrirut_tazurant.mw
@@ -11,5 +11,13 @@
 == Ẓeṛ daɣen ==
 
 * [[Acebcal]]
-
 * [[Acebcal (tawsit)|Acebcal amezday]]
+
+
+
+
+
+[[Category:iɣersiwen]]
+[[Category:timseɣẓaẓ]]
+[[Category:Timsuṭad]]
+[[Category:icebcalen]]
