*Empty MediaWiki Message*

--- a/Acebcal_azunɣid.mw
+++ b/Acebcal_azunɣid.mw
@@ -8,3 +8,9 @@
 == Ẓei daɣen ==
 
 * [[Tafrirut tazurant]]
+
+
+[[Category:iɣersiwen]]
+[[Category:timseɣẓaẓ]]
+[[Category:Timsuṭad]]
+[[Category:icebcalen]]
