--- a/Aɣeṛda.mw
+++ b/Aɣeṛda.mw
@@ -15,7 +15,7 @@ Iɣeṛdayen tetten imɣan (aladɣa [[imendi|imendiyen]] d [[igumma]]) ayen id t
 
 == Ẓeṛ daɣen ==
 
-[[Category:aɣersiw]]
+[[Category:iɣersiwen]]
 [[Category:timseɣẓaẓ]]
 [[Category:Timsuṭad]]
 [[Category:tiɣeṛdayin]]
