*Empty MediaWiki Message*

--- a/Tazɣuda.mw
+++ b/Tazɣuda.mw
@@ -13,7 +13,7 @@ Tazɣuda d aɣersiw yessermaden deg [[iṭ]], tettunag ɣef wučč, učči-ynes 
 == Ẓeṛ daɣen ==
 * [[Aɣeṛda]]
 
-[[Category:aɣersiw]]
+[[Category:iɣersiwen]]
 [[Category:timseɣẓaẓ]]
 [[Category:Timsuṭad]]
 [[Category:tiɣeṛdayin]]
