*Empty MediaWiki Message*

--- a/Aɣuli.mw
+++ b/Aɣuli.mw
@@ -13,5 +13,9 @@ Akken i llan-t dges telmas d [[agrad|timegrudin]] iy zemren ad idiren deg wexxam
 
 == Ẓeṛ daɣen ==
 
-[[Category:Iɣersiwen]]
-[[Category:Timseɣẓaẓ]]
+
+[[Category:iɣersiwen]]
+[[Category:timseɣẓaẓ]]
+[[Category:Timsuṭad]]
+[[Category:tiɣeṛdayin]]
+[[Category:Iɣerdayen]]
