*Empty MediaWiki Message*

--- a/Tizemraradin.mw
+++ b/Tizemraradin.mw
@@ -1,6 +1,6 @@
 {{Automatic taxobox}}
 
-'''Tizunmraradin''' ([[isem usnan]]: ''Reptiliomorpha'') d [[asmil (tasnudert)|asmil]] n [[timraradin|temraradin]] yeṭṭafaren [[Afelasmil]] n [[Tikuẓdarin|tkuẓdarin]]
+'''Tizemraradin''' ('''[[Assaɣ ussnan]]''': ''Reptiliomorpha'') d [[asmil (tasnudert)|asmil]] n [[timraradin|temraradin]] yeṭṭafaren [[afelasmil]] n [[Tikuẓdarin|tkuẓdarin]]
 
 == Tasartut d usismel ==
 *[[Tinefrawin]] 
