*Empty MediaWiki Message*

--- a/Tiqerɣenbubin.mw
+++ b/Tiqerɣenbubin.mw
@@ -1,4 +1,5 @@
 {{Automatic taxobox}}
-'''Tiqerɣenbubin''' ([[isem usnan]]: ''Rhynchocephalia'') d [[tafesna]] n [[timraradin|temraradin]] dgi yella snat Kan n [[talmest|telmas]] ttidirent deg tmurt n [[Nyuzilanda]].
+'''Tiqerɣenbubin''' ('''[[Assaɣ ussnan]]''': ''Rhynchocephalia'') d [[tafesna (tasnudert)|tafesna]] n [[timraradin|temraradin]] anda llant snat Kan n [[talmest|telmas]] ttidirent deg tmurt n [[Nyuzilanda]].
 
-[[Category:aɣersiw]]
+[[Category:iɣersiwen]]
+[[Category:Timraradin]]
