--- a/Tiɣucaf.mw
+++ b/Tiɣucaf.mw
@@ -1,3 +1,3 @@
 {{Automatic taxobox}}
-'''Tiɣucaf''' ([[isem usnan]]: ''Crocodylidae'') d [[tawacult (tasnudert)|tawacult]] n [[tizutar|tzutar]] yeṭṭafaren [[timraradin]], Tawacult-a dges snat n [[adu-twacult|adu-twaculin]], Yiwet d [[adu-twacult]] n [[aɣucaf|uɣucaf]], Tis snat d [[Tigavyalidin]] dgi llan-t azal n 15 n [[tawsit (tudersent)|tewsitin]]
+'''Tiɣucaf''' ('''[[Assaɣ ussnan]]''': ''Crocodylidae'') d [[tawacult (tasnudert)|tawacult]] n [[tizutar|tzutar]] yeṭṭafaren [[timraradin]], Tawacult-a dges snat n [[adu-twacult|adu-twaculin]], Yiwet d [[adu-twacult]] n [[aɣucaf|uɣucaf]], Tis snat d [[Tigavyalidin]] dgi llan-t azal n 15 n [[tawsit (tudersent)|tewsitin]]
 [[Category:Aɣersiw]]
