--- a/Aɣucaf.mw
+++ b/Aɣucaf.mw
@@ -19,4 +19,9 @@ Deg uɣucaf llan-t 3 n [[tawsit (tudersent)|tewsitin]] d 14 n [[talmest|telmas]]
 ** [[Aɣucaf n ibelmaten]] (''Crocodylus palustris'').
 ** [[Aɣucaf n Uṛinuku]] (''Crocodylus intermedius'').
 
-[[Category:aɣersiw]]
+
+
+[[Category:iɣersiwen]]
+[[Category:Tizutar]]
+[[Category:Tiɣucaf]]
+[[Category:Timraradin]]
