--- a/Aɣucaf_n_Nnil.mw
+++ b/Aɣucaf_n_Nnil.mw
@@ -11,3 +11,10 @@ Azal n [[tiddi]] n uɣucaf n Nnil yessawad gar n 4,5 m ar 5 m, Ma d [[azuk]]-is 
 == Učči == 
 
 == Tiwlafin ==
+
+
+[[Category:iɣersiwen]]
+[[Category:Tizutar]]
+[[Category:Tiɣucaf]]
+[[Category:Timraradin]]
+[[Category:Iɣucafen]]
