*Empty MediaWiki Message*

--- a/Aɣucaf_awlal.mw
+++ b/Aɣucaf_awlal.mw
@@ -4,3 +4,10 @@
 == Aglam ==
 
 == Učči ==
+
+
+[[Category:iɣersiwen]]
+[[Category:Tizutar]]
+[[Category:Tiɣucaf]]
+[[Category:Timraradin]]
+[[Category:Iɣucafen]]
