*Empty MediaWiki Message*

--- a/Tinefrawin.mw
+++ b/Tinefrawin.mw
@@ -5,6 +5,6 @@
 * [[Sauropsida]]
 }}
 
-'''Tinefrawin''' ([[Isem usnan]]: ''Amniota'') d tarebbut (tarbaɛt) tasartut n [[Tikuẓdarin|tkuẓdarin]] yessrusayen [[Tamellalt (tasnudert)|timellalin]] deg ugensu-nsent (Daxel nsent) [[tanefra]] am [[aslem|iselman]].
+'''Tinefrawin''' ('''[[Assaɣ ussnan]]''': ''Amniota'') d tagrawt tasartut n [[Tikuẓdarin|tkuẓdarin]] yessrusayen [[Tamellalt (tasnudert)|timellalin]] deg ugensu-nsent (Daxel nsent) [[tanefra]] am [[aslem|iselman]].
 
 [[Category:aɣersiw]]
