*Empty MediaWiki Message*

--- a/Tinefrawin.mw
+++ b/Tinefrawin.mw
@@ -7,4 +7,4 @@
 
 '''Tinefrawin''' ('''[[Assaɣ ussnan]]''': ''Amniota'') d tagrawt tasartut n [[Tikuẓdarin|tkuẓdarin]] yessrusayen [[Tamellalt (tasnudert)|timellalin]] deg ugensu-nsent (Daxel nsent) [[tanefra]] am [[aslem|iselman]].
 
-[[Category:aɣersiw]]
+[[Category:tikuẓdarin]]
