*Empty MediaWiki Message*

--- a/Imiglen.mw
+++ b/Imiglen.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''imiglen''' ([[isem usnan]]: ''Ophidia'') d [[tidulmest]] n [[Timraradin|temraradin]] yeṭṭafaren [[tafesna]] n [[Timeskebrin|tmeskebrin]]
+'''imiglen''' ('''[[Assaɣ ussnan]]''': ''Ophidia'') d [[adu-telmest]] n [[Timraradin|temraradin]] yeṭṭafaren [[tafesna (tasnudert)|tafesna]] n [[Timeskebrin|tmeskebrin]]
 
 == Tasartut ==
 [[Category:aɣersiw]]
