*Empty MediaWiki Message*

--- a/Imiglen.mw
+++ b/Imiglen.mw
@@ -2,4 +2,10 @@
 '''imiglen''' ('''[[Assaɣ ussnan]]''': ''Ophidia'') d [[adu-telmest]] n [[Timraradin|temraradin]] yeṭṭafaren [[tafesna (tasnudert)|tafesna]] n [[Timeskebrin|tmeskebrin]]
 
 == Tasartut ==
-[[Category:aɣersiw]]
+
+
+
+[[Category:iɣersiwen]]
+[[Taggayt:Izerman]]
+[[Taggayt:Timraradin]]
+[[Taggayt:Timeskebrin]]
